# Spacescape

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  License.md  License.txt  README.md  azure-pipelines.yml  conanfile.txt
CMake/: ExternalModule.cmake
ci/: downloader.py  fetcher.py  linux.yml  macos.yml  ogre.yml  ogreinstaller.py  ogrewininstaller.py  windows.yml
ci/ogre/: linux.yml  macos.yml  ogre.yml  windows.yml
ci/qt/: linux.yml  macos.yml  windows.yml
share/: CMakeLists.txt
share/app/linux/: app.cfg
src/Spacescape/: CMakeLists.txt  Spacescape.qrc  Spacescape.rc  SpacescapeVersion.h.in
src/Spacescape/include/: AboutDialog.h  ExportFileDialog.h  MainWindow.h  PreviewWidget.h  QtOgreWidget.h  QtSpacescapeAboutDialog.h  QtSpacescapeAboutDialogUI.h  QtSpacescapeExportFileDialog.h  QtSpacescapeMainWindow.h  QtSpacescapeUI.h  QtSpacescapeWidget.h  SpacescapeVersion.h.in
src/Spacescape/include/Logging/: CompoundLogOutput.h  ConsoleLogOutput.h  FileLogOutput.h  Log.h  LogMessageHandler.h  LogOutput.h
src/Spacescape/include/PropertyBrowser/: QtFilePathProperty.h
src/Spacescape/resources/: stylesheet.qss
src/Spacescape/src/: AboutDialog.cpp  AboutDialog.ui  ExportFileDialog.cpp  Main.cpp  MainWindow.cpp  MainWindow.ui  PreviewWidget.cpp  QtOgreWidget.cpp  QtSpacescapeAboutDialog.cpp  QtSpacescapeExportFileDialog.cpp  QtSpacescapeMainWindow.cpp  QtSpacescapeWidget.cpp  aboutdialog.ui  mainwindow.ui
src/Spacescape/src/Logging/: CompoundLogOutput.cpp  ConsoleLogOutput.cpp  FileLogOutput.cpp  Log.cpp  LogMessageHandler.cpp  LogOutput.cpp
src/Spacescape/src/PropertyBrowser/: QtFilePathProperty.cpp
src/SpacescapePlugin/: CMakeLists.txt
src/SpacescapePlugin/include/: SpacescapeBillboard.h  SpacescapeBillboardSet.h  SpacescapeLayer.h  SpacescapeLayerBillboards.h  SpacescapeLayerNoise.h  SpacescapeLayerPoints.h  SpacescapeNoiseMaterial.h  SpacescapePlugin.h  SpacescapePluginVersion.h.in  SpacescapePrerequisites.h  SpacescapeProgressListener.h
src/SpacescapePlugin/src/: SpacescapeBillboardSet.cpp  SpacescapeDll.cpp  SpacescapeLayer.cpp  SpacescapeLayerBillboards.cpp  SpacescapeLayerNoise.cpp  SpacescapeLayerPoints.cpp  SpacescapeNoiseMaterial.cpp  SpacescapePlugin.cpp
