cmake_minimum_required(VERSION 3.0)

set(SPC_VERSION_MAJOR 0)
set(SPC_VERSION_MINOR 7)
set(SPC_VERSION_PATCH 0)

if(DEFINED SPC_VERSION_BUILD)
	set(SPC_VERSION ${SPC_VERSION_MAJOR}.${SPC_VERSION_MINOR}.${SPC_VERSION_PATCH}-${SPC_VERSION_BUILD})
else()
	set(SPC_VERSION ${SPC_VERSION_MAJOR}.${SPC_VERSION_MINOR}.${SPC_VERSION_PATCH})
endif()

project(Spacescape VERSION ${SPC_VERSION_MAJOR}.${SPC_VERSION_MINOR}.${SPC_VERSION_PATCH})

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMake)

include(GNUInstallDirs)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs/Ogre)
list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libs/Qt)

if(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
endif(MSVC)

find_package(Qt5 COMPONENTS Gui REQUIRED)
find_package(OGRE 1.12 REQUIRED)

add_subdirectory(src/Spacescape)
add_subdirectory(src/SpacescapePlugin)
add_subdirectory(share)
